add proceed to checkout button. but it should be edited to match with the rest of the theme

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vee-validate/yup": "^4.13.2",
     "flowbite": "^2.5.1",
     "nuxt": "^3.13.0",
     "vee-validate": "^4.13.2",
