--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vee-validate/yup": "^4.13.2",
+    "chart.js": "^4.4.4",
     "flowbite": "^2.5.1",
     "nuxt": "^3.13.0",
     "vee-validate": "^4.13.2",
