--- a/hasura/docker-compose.yml
+++ b/hasura/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "cinema_user"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   hasura:
     image: hasura/graphql-engine:v2.0.10
