--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,74 @@
-version: '3.8'
-
 services:
-  backend:
-    build: ./backend
+  postgres:
+    image: postgres:15
+    restart: always
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: password
+
+  hasura:
+    image: hasura/graphql-engine:v2.42.0
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    environment:
+      HASURA_GRAPHQL_DATABASE_URL: postgres://cinema_user:password@postgres:5432/cinema_db
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
+      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+      HASURA_GRAPHQL_JWT_SECRET: '{ "type": "HS256", "key": "oursupersecretsupersecurekey1234567890" }'
+      WEB_HOOK_URL: http://go-server:3000
+      HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"athena":{"uri":"http://data-connector-agent:8081/api/v1/athena"},"mariadb":{"uri":"http://data-connector-agent:8081/api/v1/mariadb"},"mysql8":{"uri":"http://data-connector-agent:8081/api/v1/mysql"},"oracle":{"uri":"http://data-connector-agent:8081/api/v1/oracle"},"snowflake":{"uri":"http://data-connector-agent:8081/api/v1/snowflake"}}}}'
+
+  graphql-engine:
+    image: hasura/graphql-engine:v2.42.0
     ports:
       - "8080:8080"
     environment:
-      - POSTGRES_URL=${POSTGRES_URL}
-      - HASURA_URL=${HASURA_URL}
+      HASURA_GRAPHQL_DATABASE_URL: postgres://cinema_user:password@postgres:5432/cinema_db
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
+      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: anonymous
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+      HASURA_GRAPHQL_JWT_SECRET: '{ "type": "HS256", "key": "oursupersecretsupersecurekey1234567890" }'
+      WEB_HOOK_URL: http://go-server:3000
+      HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"athena":{"uri":"http://data-connector-agent:8081/api/v1/athena"},"mariadb":{"uri":"http://data-connector-agent:8081/api/v1/mariadb"},"mysql8":{"uri":"http://data-connector-agent:8081/api/v1/mysql"},"oracle":{"uri":"http://data-connector-agent:8081/api/v1/oracle"},"snowflake":{"uri":"http://data-connector-agent:8081/api/v1/snowflake"}}}}'
     depends_on:
-      - postgres
-      - hasura
-
-  frontend:
-    build: ./frontend
+      data-connector-agent:
+        condition: service_healthy
+  go-server:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
-      - VITE_API_URL=${VITE_API_URL}
-
-  postgres:
-    image: postgres:13
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - HASURA_GRAPHQL_ENDPOINT=http://graphql-engine:8080/v1/graphql
+      - HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
+      - JWT_SECRET=jwt_secret_123
+      - PORT=3000
     volumes:
-      - ./hasura/migrations:/docker-entrypoint-initdb.d/migrations
+      - uploads:/usr/src/app/uploads
 
-  hasura:
-    image: hasura/graphql-engine:v2.0.9
+  data-connector-agent:
+    image: hasura/graphql-data-connector:v2.42.0
+    restart: always
     ports:
-      - "8080:8080"
+      - "8081:8081"
     environment:
-      - HASURA_GRAPHQL_DATABASE_URL=${POSTGRES_URL}
-      - HASURA_GRAPHQL_ENABLE_CONSOLE=true
-      - HASURA_GRAPHQL_ADMIN_SECRET=${HASURA_GRAPHQL_ADMIN_SECRET}
-    depends_on:
-      - postgres
+      QUARKUS_LOG_LEVEL: ERROR
+      QUARKUS_OPENTELEMETRY_ENABLED: "false"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/api/v1/athena/health"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
+      start_period: 5s
+
+volumes:
+  db_data:
+  uploads:
