--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "tailwindcss": "^3.4.13",
     "vee-validate": "^4.13.2",
     "vue": "latest",
-    "vue-router": "latest",
+    "vue-router": "^4.4.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
