--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.5",
     "@vee-validate/nuxt": "^4.13.2",
     "@vee-validate/zod": "^4.13.2",
     "@vue/apollo-composable": "^4.2.1",
     "@vueuse/core": "^11.1.0",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "flowbite": "^2.5.1",
     "lucide-vue-next": "^0.446.0",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vue": "latest",
